--- a/report/document.tex
+++ b/report/document.tex
@@ -13,6 +13,7 @@
 \usepackage{url}
 \usepackage{setspace}  
 \usepackage{hvfloat}
+\usepackage{multicol}
 \doublespacing     % Inter lines space
 
 %%%%%%%%%%%%%%% FANCY HDR Settings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
