--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -4,13 +4,15 @@
 %---What methodology we used---
 
 We analyze the possibility of automatically transform a BPEL written process in a Java executable routine, with minimum ad-hoc developer’s intervention. Our final objective is to show the feasibility of a semi-automated transformation from a small business process orchestrated with BPEL to the Java language.
-This section describes the methodological approach we undertaken to realize our objective. The steps are summarized as following:
+This section describes the methodological approach we undertaken to realize our objective. The following list summarizes the steps we undertake to make our final choice:
 
 \begin{itemize}
+ \item The domain of our transformation
+ \item  The methodological approach: Programming vs Code Generation vs Model Driven Architecture 
+ \item Choose a model driven architecture that allows us to manipulate  the BPEL input model (M2M, M2T) and that is compatible with a ready to run code output.
  \item We identify the subset of BPEL instructions suitable for a proof of concept of the transformation.
  \item Select a BPEL meta-model that covers the chosen subset of instructions.
- \item Individuate a BPEL workflow pattern to work on
- \item Choose a model driven methodology that allows us to manipulate  the BPEL input model (M2M, M2T) and that is compatible with a ready to run code output.
+ \item Individuate a BPEL workflow pattern to work on 
 \end{itemize} 
 
 Once these steps have been accomplished, we focus on providing more details on how we carry out the transformation. The main points are:
@@ -26,6 +28,25 @@ Once these steps have been accomplished, we focus on providing more details on h
  
  To mention later: \\
  StubPartnerLinks, code to be input by the user, static code, the problem with the WSDL file
+
+\subsection{The domain of the transformation} 
+In our transformation we are dealing with BPEL, which is a DSL (Domain Specific Language), and Java, which is a multipurpose language. 
+Having to deal with a model produced with a DSL means that   we don't have to take care of the general constructs and ideas that are present in a generic language. The language is already skimmed to what is necessary to orchestrate business processes, nothing more.  %Most importantly, the fact the input model is produced in a DSL  
+ 
+\subsection{The methodological approach}
+\label{sec:ProgrammingVsMDE}
+To realize the transformation, many possibilities arise; from a very specific, custom solution to a more broad and abstract approach. The possibilities could be generalized in three main families: a manual ad-hoc programming solution, a code generation automation or a model driven architecture abstraction
+\subsubsection{Ad-hoc Programming solution}
+The programming solution would create an ad-hoc solution for our purpose.  At the same time, as our purpose is to provide a proof of concept for our approach more than a runnable application, programming a one time, ready to deploy solution, does not fid our needs.
+\subsubsection{Code Generation}
+This solution is aimed at automatizing the generation of code that would otherwise have to be written by hand. It concerns the creation of models/templates that will be later transformed in working code by an additional application. Although this solution might partially fit our need of an automated generation, we might have to create models/templates for many components, and we have to take into account a possible large amount of similar portions of code needed in different parts of the final application.  Thus, we need a solution that will rise of one more step the abstraction.
+\subsubsection{Model Driven Architecture (MDA) Abstraction}
+The MDA aims, as well as the Code Generation automation, at the creation of models to be later transformed in runnable code (see Section \ref{MDA}). The difference lies in the fact that MDA permits to create an architecture where we could actually specify generic transformations strategies. For example, instead of creating a template for any BPEL construct, with MDA we could create a hierarchy of templates where similar BPEL constructs are sharing part of the code minimizing the quantity of hand written code at the price of a longer design phase.
+\subsubsection{The proposed methodological approach}
+Given the fact that our transformation has the purpose of showing the feasibility of such a transformation form BPEL to Java, we have to take into account that only a small part of the BPEL language can be taken into account. Moreover, we want to propose a possibly expandable design for such a transformation. Last but not least, we have to keep an eye on possible future developments. For these reasons, we decided to use a Model Driven Architecture methodology.
+
+\subsection{Tailoring the MDA approach to our case}
+Once the MDA approach has been chosen, we have to choose which kind of model transformation we want to apply.
 
 \subsection{The BPEL subset of instructions}
 \label{Sec:BPELsubset}
@@ -64,6 +85,7 @@ We decided to restrict the BPEL activities to a subset containing the following 
 \end{supertabular}
 \end{center}
 
+The Basic and Structured activities define the BPEL process logic (see Section \ref{BPELActivities}). The elementary operations are present inside the activities, while the static descriptive elements are meant to statically describe some of the parameters needed by BPEL process.
 These elements allow the creation of simple BPEL processes, where the activities such as: invoking a service or waiting for a reply, happen as a sequence, one after the other. Although this limits the expressive potentiality of BPEL, it fits our need of focusing on proving the feasibility of an automated transformation from BPEL to Java without having to deal with the complexity of the whole language.
 In Figure \ref{fig:SubSetBPEL} the BPEL subset of elements used for this project is depicted.
 
