--- a/report/references.bib
+++ b/report/references.bib
@@ -1,7 +1,14 @@
 % References
-http://download.eclipse.org/modeling/emf/emf/javadoc/2.8.0/org/eclipse/emf/ecore/package-summary.html
-http://www.acceleo.org/pages/architecture/en
 
+
+
+@Misc{ wsimport,
+	title = "wsimport - Java API for XML Web Services (JAX-WS) 2.0",
+	author = "Oracle",
+	howpublished = "\url{http://docs.oracle.com/javase/6/docs/technotes/tools/share/wsimport.html}",
+	year = "2011",
+	note = "[Online; accessed 26-August-2012]"
+}
 
 @Misc{ AcceleoPresentation,
 	title = "Acceleo Presentation",
@@ -10,7 +17,6 @@ http://www.acceleo.org/pages/architecture/en
 	year = "2008",
 	note = "[Online; accessed 23-August-2012]"
 }
-
 
 @Misc{ XMIandMOF,
 	title = "XMI and MOF: a mini-tutorial. Presented at XSE2001",
